ui: css for tabs added

--- a/Exer06.html
+++ b/Exer06.html
@@ -17,9 +17,9 @@
         <div class="outer-container">
             <div class="tab-section">
                 <ul>
-                    <li data-tab-target="#food-option">FAVORITE FOODS</li>
-                    <li data-tab-target="#song-option">FAVORITE SONGS</li>
-                    <li data-tab-target="#quote-option">FAVORITE QUOTES</li>
+                    <li class="tab" data-tab-target="#food-option">FAVORITE FOODS</li>
+                    <li class="tab" data-tab-target="#song-option">FAVORITE SONGS</li>
+                    <li class="tab" data-tab-target="#quote-option">FAVORITE QUOTES</li>
                 </ul>
             </div>
 
